[gd_scene load_steps=10 format=2]

[ext_resource path="res://themes/ttheme.tres" type="Theme" id=1]
[ext_resource path="res://game/dialog/CombatMenuStat.tres" type="DynamicFont" id=2]
[ext_resource path="res://game/dialog/enemy_menu.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.145098, 0.207843, 0.239216, 0.831373 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0196078, 0.329412, 0.427451, 0.427451 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxLine" id=6]
color = Color( 0.0196078, 0.329412, 0.427451, 0.427451 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.172549, 0.443137, 0.54902, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.027451, 0.12549, 0.172549, 0.807843 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.392157, 0.396078, 0.65098, 0.121569 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0313726, 0.176471, 0.25098, 0.784314 )
border_color = Color( 0.0196078, 0.329412, 0.427451, 0.427451 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CombatMenu" type="Panel"]
margin_right = 164.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 128 )
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 3 )
script = ExtResource( 3 )

[node name="Stats1" type="VBoxContainer" parent="."]
margin_left = 12.0
margin_top = 6.0
margin_right = 76.0
margin_bottom = 64.0
custom_constants/separation = 1

[node name="HP" type="Label" parent="Stats1"]
margin_right = 64.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 2 )
text = "HP: 1000"

[node name="DP" type="Label" parent="Stats1"]
margin_top = 14.0
margin_right = 64.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "DP: ?"

[node name="SP" type="Label" parent="Stats1"]
margin_top = 28.0
margin_right = 64.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 2 )
text = "SP: ?"

[node name="MP" type="Label" parent="Stats1"]
margin_top = 42.0
margin_right = 64.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 2 )
text = "MP: ?"

[node name="Stats2" type="VBoxContainer" parent="."]
margin_left = 92.0
margin_top = 6.0
margin_right = 160.0
margin_bottom = 64.0
custom_constants/separation = 1

[node name="WP" type="Label" parent="Stats2"]
margin_right = 68.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 2 )
text = "WP: ?"

[node name="LUCK" type="Label" parent="Stats2"]
margin_top = 14.0
margin_right = 68.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "LUCK: ?"

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 1.0
margin_top = 63.2509
margin_right = 163.0
margin_bottom = 67.2509
custom_styles/separator = SubResource( 6 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 7.0
margin_top = 68.0
margin_right = 163.0
margin_bottom = 125.0

[node name="StatusEffects" type="GridContainer" parent="ScrollContainer"]
custom_constants/vseparation = 0
columns = 2

[node name="Button3" type="Button" parent="."]
margin_left = 88.0
margin_top = 34.0
margin_right = 156.0
margin_bottom = 62.0
rect_min_size = Vector2( 65, 20 )
focus_mode = 0
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
disabled = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Insight"
